--- a/index.htm
+++ b/index.htm
@@ -36,7 +36,7 @@
       <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade show active" 
         id="home" role="tabpanel" aria-labelledby="home-tab">
-          <table class="table">
+          <table class="table table-responsive-md">
             <p class="h3 fw-bold">Lorem, ipsum dolor.</p>
             <p>Lorem ipsum dolor sit.
             Laboriosam vitae reprehenderit voluptatum.
@@ -98,7 +98,7 @@
 
         <div class="tab-pane fade container" id="profile" role="tabpanel"
          aria-labelledby="profile-tab">
-         <table class="table table-secondary ">
+         <table class="table table-secondary table-responsive-sm">
             <p class="h3 fw-bold">Lorem, ipsum dolor.</p>
             <p>Lorem ipsum dolor sit.
             Laboriosam vitae reprehenderit voluptatum.
@@ -143,7 +143,7 @@
 
         <div class="tab-pane fade" id="contact" role="tabpanel" 
         aria-labelledby="contact-tab">
-        <table class="table table-dark">
+        <table class="table table-dark table-responsive-md">
             <p class="h3 fw-bold">Lorem, ipsum dolor.</p>
             <p>Lorem ipsum dolor sit.
             Laboriosam vitae reprehenderit voluptatum.
